<resources>
    <string name="app_name">Ninja Challenge SQ</string>
    <string name="post_list">All Posts</string>
    <string name="new_post">Write a new post</string>
    <string name="users_list">Users</string>
    <string name="post">Post</string>
    <string name="userIdText"><u>User ID:</u></string>
    <string name="postIdText"><u>Post ID:</u></string>
    <string name="commentIdText"><u>Comment ID:</u></string>
    <string name="nameText"><u>Name:</u></string>
    <string name="titleForm">Post title</string>
    <string name="bodyForm">Message</string>
    <string name="titleText"><u>Insert title</u></string>
    <string name="emailText"><u>E-mail:</u></string>
    <string name="problems">There were some problems</string>
    <string name="problems_parsing">Failed to parse JSON</string>
    <string name="problems_network">Couldn\'t load the data. Please check your network settings</string>
    <string name="response_code">Response code:</string>
    <string name="unsuccessful_request">Unsuccessful request</string>
    <string name="progress_bar_title">Loading</string>
    <string name="progress_bar_message">Please wait until the content is loaded</string>
    <string name="submit">Submit</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_refresh">Refresh</string>
    <string name="title_hint"><i>Title here</i></string>
    <string name="body_hint"><i>What are you thinking?</i></string>
    <string name="post_request_ok">Data posted successfully!</string>
    <string name="users_id"><u>Id:</u></string>
    <string name="users_name"><u>Name:</u></string>
    <string name="users_username"><u>Username:</u></string>
    <string name="users_email"><u>E-mail:</u></string>
    <string name="users_phone"><u>Phone:</u></string>
    <string name="users_website"><u>Website:</u></string>

</resources>
